{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 31,
  "lineage": "7177f3ac-17c4-5833-088d-a4f400f11cb3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkInterfaces/webnic01",
            "internal_domain_name_suffix": "pmb0ayvgcjyebkpbdkpw25la1b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/publicIPAddresses/web",
                "subnet_id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/virtualNetworks/primary/subnets/web"
              }
            ],
            "location": "eastus",
            "name": "webnic01",
            "private_ip_address": "192.168.0.4",
            "private_ip_addresses": [
              "192.168.0.4"
            ],
            "resource_group_name": "ntier"
          },
          "dependencies": [
            "azurerm_public_ip.web",
            "azurerm_resource_group.group",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkInterfaces/webnic01|/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkSecurityGroups/webnsg",
            "network_interface_id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkInterfaces/webnic01",
            "network_security_group_id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkSecurityGroups/webnsg"
          },
          "dependencies": [
            "azurerm_network_interface.web",
            "azurerm_network_security_group.web",
            "azurerm_public_ip.web",
            "azurerm_resource_group.group",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkSecurityGroups/webnsg",
            "location": "eastus",
            "name": "webnsg",
            "resource_group_name": "ntier",
            "security_rule": [],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "openhttp",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "this opens 80 port",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkSecurityGroups/webnsg/securityRules/openhttp",
            "name": "openhttp",
            "network_security_group_name": "webnsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "ntier",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.group"
          ]
        },
        {
          "index_key": "openssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "this opens 22 port",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/networkSecurityGroups/webnsg/securityRules/openssh",
            "name": "openssh",
            "network_security_group_name": "webnsg",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "ntier",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web",
            "azurerm_resource_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/publicIPAddresses/web",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.12.213",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web",
            "resource_group_name": "ntier",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/virtualNetworks/primary/subnets/web",
            "name": "web",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier",
            "virtual_network_name": "primary"
          },
          "dependencies": [
            "azurerm_resource_group.group",
            "azurerm_virtual_network.primary"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/virtualNetworks/primary/subnets/app",
            "name": "app",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier",
            "virtual_network_name": "primary"
          },
          "dependencies": [
            "azurerm_resource_group.group",
            "azurerm_virtual_network.primary"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/virtualNetworks/primary/subnets/db",
            "name": "db",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier",
            "virtual_network_name": "primary"
          },
          "dependencies": [
            "azurerm_resource_group.group",
            "azurerm_virtual_network.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "62a0037b-12a6-4070-a9e1-1a9f6e7d60d9",
            "id": "/subscriptions/8b14a285-99d5-4a5e-bb34-1ece25e1ecee/resourceGroups/ntier/providers/Microsoft.Network/virtualNetworks/primary",
            "location": "eastus",
            "name": "primary",
            "resource_group_name": "ntier",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.group"
          ]
        }
      ]
    }
  ]
}